# plus

./: .buildinfo  .clang-format  .clang-uml  .gitignore  .gitmodules  .pre-commit-config.yaml  CITATION.cff  CMakeLists.txt  CMakeSettings.json  README.md  api.html  cpp_diagram.drawio  environment.yml  install.html  search.html  searchindex.js  setup.py
_sources/: examples.rst  index.rst
_static/: google-analytics.js
docs/: api.rst  class_diagrams.rst  conf.py  index.rst  install.rst  tutorial.rst
examples/: Bloch_wall_altermagnet.py  DW_rigid_strain_SAW.py  LLtorque.py  MRAM_bit_switch.py  antiferromagnetic-resonance.py  elasticband.py  elasticband_pma.py  electricpotential.py  errorscaling.py  geometry.ipynb  magnetization_configurations.ipynb  magnetoelastic.py  magnetoelastic_dispersion.py  magnetoelastic_dispersion_afm.py  magnon-phonon.py  mfm.py  multilayer.py  periodic_bc.py  plot_field.ipynb  precision.ipynb  pure_elastic.py  regions.ipynb  rigid_strain.py  skyrmion_excitation.py  skyrmionracetrack.py  spinwave_dispersion.py  spinwave_dispersion_afm.py  spinwave_dispersion_atm.py  standardproblem3.py  standardproblem4.ipynb  standardproblem4.py  standardproblem_DW_pinning.py  temperature.py  voronoi.html  voronoi.py
mumax5/: __init__.py  elasticband.py  ferromagnet.py  parameter.py
mumaxplus/: __init__.py  altermagnet.py  antiferromagnet.py  ferromagnet.py  fieldquantity.py  grid.py  interparameter.py  magnet.py  ncafm.py  parameter.py  strayfield.py  timesolver.py  variable.py  world.py
paper/: AFM_racetrack.py  NcAfm_NV.py
paper2025/: AFM_mobility.py  AFM_racetrack.py  NcAfm_NV.py  README.md  anti_AFM.py  bench.py  bench_mumax3.mx3
src/physics/: CMakeLists.txt  afmexchange.cu  afmexchange.hpp  altermagnet.cpp  altermagnet.hpp  anisotropy.cu  anisotropy.hpp  atmexchange.cu  atmexchange.hpp  bulkdmi.cu  bulkdmi.hpp  conductivitytensor.cu  constants.hpp  demag.cpp  demag.hpp  demagasymptotic.cpp  demagasymptotic.cu  demagasymptotic.hpp  dmi.cu  effectivefield.cpp  elasticband.cu  elasticband.hpp  elasticdamping.cu  elasticenergies.cu  elasticforce.cu  elastodynamics.hpp  energy.cu  energy.hpp  exchange.cu  exchange.hpp  ferromagnet.cpp  ferromagnet.hpp  ferromagnetquantity.hpp  fullmag.cu  fullmag.hpp  interfacialdmi.cu  interfacialdmi.hpp  internalbodyforce.cu  local_dmi.hpp  magnet.cpp  (+43 more)
test/: exact_Nxx  exact_Nxx_aspect  exact_Nxy  exact_Nxy_aspect  exact_Nxy_aspect.json  test_anisotropic_exchange.py  test_demag.py  test_domain_wall_afm.py  test_domain_wall_atm.py  test_elastic_acceleration.py  test_elasticforce_uniform_c.py  test_exchange.py  test_exchange_afm.py  test_exchange_ncafm.py  test_fp_precision.py  test_free_layer.py  test_free_layer_thickness.py  test_frozenspins.py  test_full_magnetization.py  test_gamma.py  test_neel_canting.py  (+9 more)
(+228 files in other folders)
